Dodanie darmowej przysłyki

--- a/web/templates/emails/invoice.html
+++ b/web/templates/emails/invoice.html
@@ -197,10 +197,9 @@
         <td>{{ item.price|mul:item.quantity|floatformat:2 }}</td>
       </tr>
       {% endfor %}
-      {% if order.delivery_price %}
       <tr>
         <td>{{ forloop.counter|add:"1" }}</td>
-        <td>Przesyłka</td>
+        <td>Usługa kurierska</td>
         <td>szt.</td>
         <td>1</td>
         <td>{{ order.delivery_price|div:1.23|floatformat:2 }}</td>
@@ -210,7 +209,6 @@
         <td>{{ order.delivery_price|vat_value|floatformat:2 }}</td>
         <td>{{ order.delivery_price|floatformat:2 }}</td>
       </tr>
-      {% endif %}
       {% if order.payment_price %}
       <tr>
         <td>{{ forloop.counter|add:"2" }}</td>
